Fix footer position and optimize link tag placement

--- a/style.css
+++ b/style.css
@@ -223,7 +223,7 @@ input.incorrect:focus {
 }
 
 footer {
-  position: absolute;
+  position: fixed;
   bottom: 10px;
   left: 50%;
   transform: translateX(-50%);
