--- a/css/index.css
+++ b/css/index.css
@@ -22,6 +22,10 @@ body {
   width: 100%;
 }
 
+#progressText {
+  text-align: center;
+}
+
 .progress-bar {
   height: 8px;
   background-color: var(--primary-color);
@@ -122,18 +126,28 @@ input.incorrect:focus {
 
 button {
   background-color: var(--primary-color);
-  color: var(--text-color);
   border: none;
   padding: 12px 20px;
-  border-radius: 6px;
-  cursor: pointer;
-  font-size: 1rem;
   width: 100%;
+  border-radius: 6px;
+  font-size: 1rem;
+  color: var(--text-color);
+  cursor: pointer;
 }
 
 button:hover {
   background-color: var(--secondary-color);
   color: var(--primary-color);
+}
+
+button[disabled] {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+button[disabled]:hover {
+  background-color: var(--primary-color);
+  color: var(--text-color);
 }
 
 .hidden {
