--- a/css/var.css
+++ b/css/var.css
@@ -7,10 +7,15 @@
   --text-color: #1a1a2e;
   --border-color: #ddd;
   --shadow-color: rgba(0, 0, 0, 0.1);
+
   --correct-color: #10b981;
+  --correct-background-color: #d5f5e3;
+
   --incorrect-border-color: #ef4444;
   --incorrect-background-color: rgba(255, 176, 169, 0.82);
+
   --transition-speed: 0.2s;
+  --transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .dark-mode {
@@ -22,4 +27,7 @@
   --text-color: #ffffff;
   --border-color: #4a5568;
   --shadow-color: rgba(0, 0, 0, 0.3);
+
+  --correct-background-color: #2c544a;
+  --incorrect-background-color: #5a2a2a;
 }
