--- a/css/index.css
+++ b/css/index.css
@@ -7,28 +7,6 @@ body {
   min-height: 100vh;
 }
 
-.loading-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: var(--surface-color);
-  z-index: 999;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.loading-spinner {
-  border: 4px solid var(--primary-color);
-  border-top-color: transparent;
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  animation: spin 1s linear infinite;
-}
-
 .container {
   background-color: var(--surface-color);
   border-radius: 12px;
@@ -64,12 +42,20 @@ body {
 .word-display {
   font-size: 2.2em;
   font-weight: bold;
-  /* line-height: 0.8; */
+}
+
+.definition {
+  margin-top: 2px;
+  margin-bottom: 8px;
 }
 
 .definition,
 .ipa-display {
   font-size: 1.1em;
+}
+
+.hidden {
+  display: none;
 }
 
 input {
@@ -79,7 +65,6 @@ input {
   border-radius: 6px;
   font-size: 1.3em;
   background-color: var(--primary-color);
-  color: var(--text-color);
 
   ::placeholder {
     font-size: 0.9em;
@@ -149,7 +134,6 @@ button {
   border-radius: 6px;
   font-size: 1rem;
   background-color: var(--primary-color);
-  color: var(--text-color);
   cursor: pointer;
 
   &:hover {
@@ -166,10 +150,6 @@ button {
       color: var(--text-color);
     }
   }
-}
-
-.hidden {
-  display: none;
 }
 
 .navigation-buttons {
@@ -211,7 +191,6 @@ footer {
 }
 
 footer a {
-  color: var(--text-color);
   text-decoration: none;
 }
 
@@ -227,15 +206,24 @@ footer a:hover {
 
   .container {
     padding: 15px;
+    gap: 15px;
+  }
+
+  .progress-area {
+    gap: 15px;
+  }
+
+  .word-area {
+    gap: 5px;
   }
 
   .word-display {
-    font-size: 1.6rem;
+    font-size: 1.8em;
   }
 
-  .definition {
+  /* .definition {
     font-size: 0.9em;
-  }
+  } */
 
   input {
     font-size: 1em;
