feat: add theme toggle and source code toggle features

--- a/css/common.css
+++ b/css/common.css
@@ -3,7 +3,7 @@
   margin: 0;
   box-sizing: border-box;
 
-  transition-property: color, background-color, opacity, width, border-color;
+  transition-property: color, background-color, opacity, width, border-color, transform;
   transition-timing-function: var(--transition-timing-function);
   transition-duration: var(--transition-speed);
 
