--- a/css/index.css
+++ b/css/index.css
@@ -63,12 +63,11 @@ input {
   padding: 12px;
   border: 2px solid transparent;
   border-radius: 6px;
-  font-size: 1.3em;
+  font-size: 1.2em;
   background-color: var(--primary-color);
 
-  ::placeholder {
-    font-size: 0.9em;
-    color: var(--border-color);
+  &::placeholder {
+    font-size: 0.8em;
   }
 
   &:focus {
@@ -164,38 +163,76 @@ button {
   font-size: 1.3em;
 }
 
-#themeToggle {
+.themeToggle {
   position: fixed;
-  bottom: 10px;
-  right: 10px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  width: 40px;
-  height: 40px;
-
-  font-size: 2em;
+  bottom: 15px;
+  right: 15px;
+  z-index: 999;
 
   cursor: pointer;
+
+  i {
+    font-size: 30px;
+
+    &.icon-moon {
+      display: none;
+    }
+
+    &.icon-sun {
+      display: inline-block;
+    }
+  }
+}
+
+.dark-mode {
+  .icon-sun {
+    display: none !important;
+  }
+
+  .icon-moon {
+    display: inline-block !important;
+  }
 }
 
 footer {
   position: fixed;
   bottom: 5px;
-  left: 50%;
-  transform: translateX(-50%);
+  width: 100%;
   text-align: center;
   font-size: 0.9em;
 }
 
-footer a {
-  text-decoration: none;
-}
-
 footer a:hover {
   text-decoration: underline;
+}
+
+.source-code-toggle {
+  position: fixed;
+  bottom: 15px;
+  left: 15px;
+  z-index: 1000;
+
+  i {
+    font-size: 30px;
+  }
+}
+
+.sub-buttons {
+  position: absolute;
+  bottom: 35px;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  opacity: 0;
+  visibility: hidden;
+  transition: bottom 0.2s;
+}
+
+.source-code-toggle.active .sub-buttons {
+  opacity: 1;
+  visibility: visible;
+  bottom: 50px;
 }
 
 @media (max-width: 768px) {
