--- a/css/utils.css
+++ b/css/utils.css
@@ -1,3 +1,15 @@
+.btn-pressable {
+  cursor: pointer;
+
+  &:hover {
+    transform: scale(1.1);
+  }
+
+  &:active {
+    transform: scale(0.9);
+  }
+}
+
 .width-100pct-inner > * {
   width: 100%;
 }
